--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,9 @@ button:hover {
 }
 
 .name-value {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     font-size: 12px;
     margin-bottom: 5px;
 }
